# ua_generator

./: Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: build.yml  cron.yml  rust.yml
benches/: Cargo.toml  generate.rs
src/: lib.rs  ua.rs  ua_list.rs
ua_generator/: Cargo.toml  build.rs
ua_generator/src/: chrome_linux_ua_list.rs  chrome_mac_ua_list.rs  chrome_mobile_ua_list.rs  chrome_tablet_ua_list.rs  chrome_ua_list.rs  chrome_windows_ua_list.rs  firefox_linux_ua_list.rs  firefox_mac_ua_list.rs  firefox_mobile_ua_list.rs  firefox_tablet_ua_list.rs  firefox_ua_list.rs  firefox_windows_ua_list.rs  lib.rs  safari_mac_ua_list.rs  safari_mobile_ua_list.rs  safari_tablet_ua_list.rs  safari_ua_list.rs  ua.rs  ua_list.rs
