[package]
name = "ua_generator"
version = "0.1.1"
edition = "2021"
authors = ["j-mendez <jeff@a11ywatch.com>"]
description = "Random User Agent Spoofer in Rust."
repository = "https://github.com/a11ywatch/ua_generator"
readme = "README.md"
keywords = ["user_agent", "useragent", "user_agent_spoofer"]
categories = ["web-programming"]
license = "MIT"
documentation = "https://docs.rs/ua_generator"

[dependencies]
